confs/iptables
# Generated by iptables-save v1.4.21 on Mon Apr 10 09:43:28 2017
*nat
:PREROUTING ACCEPT [10:564]
:POSTROUTING ACCEPT [17:924]
:OUTPUT ACCEPT [5:300]
-A PREROUTING -i venet0 -p tcp -m multiport --dports 80,443,8443,9000 -j DNAT --to-destination 10.0.0.2
COMMIT
# Generated by iptables-save v1.4.21 on Mon Apr 10 09:43:28 2017
*filter
:INPUT DROP [103:9942]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [94:9720]
-A FORWARD -d 10.0.0.0/16 -j ACCEPT
-A FORWARD -s 10.0.0.0/16 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i tap0 -j ACCEPT
-A INPUT -i tap1 -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m multiport --dports 22,6022 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

COMMIT
# Completed on Mon Apr 10 09:43:28 2017
